[package]
name = "AesirCloud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["stream"] }
future-utils = "0.12.1"
futures-util = "0.3.31"
flate2 = "1.1.5"
tar = "0.4.44"
